--- a/CSS revision/index.html
+++ b/CSS revision/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS Revision</title>
+    <style>
+        button {
+            background-color: pink;
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +21,8 @@
 <!--    }-->
 <!--</style>-->
 
+<!-- In css the priority is given to the command which comes later -->
+
 <h1 id="Heading1">Hello</h1>
 <h1 id="Heading2">Hello from Nikhil</h1>
 <h2 class="myClass">Hello in green</h2>
@@ -25,8 +32,17 @@
 <hr>
 
 <div id="box">
-    <p>Div 1</p>
+    <p> Div 1 </p>
 </div>
+<br>
+
+<p id="textfontproperties">Text Properties Text Properties Text Properties Text Properties Text Properties Text
+    Properties Text Properties Text Properties Text Properties Text Properties Text Properties Text Properties Text
+    Properties Text Properties Text Properties Text Properties Text Properties Text Properties Text Properties Text
+    Properties Text Properties Text Properties </p>
+<br>
+<a href="https://www.google.com/">Google</a>
+
 
 
 </body>
