Update CSS concepts 3

--- a/CSS revision/Revise/index.html
+++ b/CSS revision/Revise/index.html
@@ -43,6 +43,23 @@
 <br>
 <a href="https://www.google.com/">Google</a>
 
+<br>
+
+<div id="Exercise1">
+</div>
+
+<br><br>
+
+<div id="Box1" class="displayExample">
+</div>
+
+<div id="Box2" class="displayExample">
+</div>
+
+<div id="Box3" class="displayExample">
+</div>
+
+
 
 
 </body>
