Update css concepts: The flex model

--- a/CSS revision/Revise/index.html
+++ b/CSS revision/Revise/index.html
@@ -59,6 +59,31 @@
 <div id="Box3" class="displayExample">
 </div>
 
+<br><br>
+
+<div class="position" id="p1">
+    p1
+</div>
+
+<div class="position" id="p2">
+    p2
+</div>
+
+<div class="position" id="p3">
+    p3
+</div>
+
+<div class="position" id="p4">
+    p4
+</div>
+<br><br>
+
+<div id="practice5">
+
+</div>
+
+
+
 
 
 
