--- a/CSS revision/Sample/index.html
+++ b/CSS revision/Sample/index.html
@@ -13,10 +13,25 @@
         <a href="" class="navHeading">Account</a>
         <a href="" class="navHeading">My Cart</a>
         <a href="" class="navHeading">Contact Us</a>
-        <label for="search"></label><input type="text" placeholder="search Amazon.in" name="search" id="search">
-        <button>Search</button>
+        <div>
+            <label for="search"></label><input type="text" placeholder="search Amazon.in" name="search" id="search">
+            <button>Search</button>
+        </div>
+
 
     </div>
 </header>
+
+<div id="content">
+    <div class="mainDiv" id="M1">Soap</div>
+    <div class="mainDiv" id="M2">Gadget</div>
+    <div class="mainDiv" id="M3">Movies</div>
+</div>
+
+
+
+<footer>
+    Made by Amazon
+</footer>
 </body>
 </html>
