--- a/CSS revision/Amazon/index.html
+++ b/CSS revision/Amazon/index.html
@@ -15,14 +15,15 @@
 <body>
 <header>
     <div class="navbar">
+
         <div class="nav-logo border">
         </div>
 
         <div class="nav-address border">
             <p class="add-first">Deliver to</p>
             <div class="add-icon">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="add-second">India</p>
+                <i class="fa-solid fa-location-dot icon1"></i>
+                <p class="add-second">Boston</p>
             </div>
         </div>
 
@@ -36,7 +37,7 @@
             </div>
         </div>
 
-        <div class="nav-signin border">
+        <div class="nav-signin-return border">
             <p class="nav-first">
                 Hello, sign in
             </p>
@@ -46,9 +47,74 @@
         </div>
 
 
+        <div class="nav-signin-return border">
+            <p class="nav-first">
+                Returns
+            </p>
+            <p class="nav-second">
+                & Orders
+            </p>
+        </div>
+
+        <div class="nav-cart border">
+            <i class="fa-solid fa-cart-shopping icon2"></i>
+            <p class="cart-text">Cart</p>
+        </div>
+
+
+    </div>
+
+    <div class="panel">
+
+        <div class="panel-all">
+            <i class="fa-solid fa-bars panel-all-icon"></i>
+            <p class="panel-all-text">All</p>
+        </div>
+
+        <div class="panel-options">
+            <p class="panel-items border">Today's Deals</p>
+            <p class="panel-items border">Customer Service</p>
+            <p class="panel-items border">Registry</p>
+            <p class="panel-items border">Gift Cards</p>
+            <p class="panel-items border">Sell</p>
+        </div>
+
+        <div class="panel-deals border">
+            <p>Shop deals in Electronics</p>
+        </div>
+
     </div>
 
 </header>
+
+<div class="hero-section">
+    <div class="hero-text">
+        <p>You are on amazon.com. You can also shop at Amazon USA for millions of products with fast local delivery.</p>
+    </div>
+</div>
+
+<div class="category-section">
+    <div class="box">
+        <h2 class="boxes-categories">Health & Personal Care</h2>
+        <img src="personal.jpg" alt="Health & Personal Care" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Beauty picks</h2>
+        <img src="beauty.jpg" alt="Beauty Picks" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Electronics</h2>
+        <img src="electronics.jpg" alt="Electronics" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Fashion</h2>
+        <img src="fashion.jpg" alt="Fashion" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+</div>
 
 </body>
 </html>
