--- a/CSS revision/Amazon/index.html
+++ b/CSS revision/Amazon/index.html
@@ -100,7 +100,7 @@
         <p class="shop-link"><a>Shop now</a></p>
     </div>
     <div class="box">
-        <h2 class="boxes-categories">Beauty picks</h2>
+        <h2 class="boxes-categories">Beauty Picks</h2>
         <img src="beauty.jpg" alt="Beauty Picks" class="boxes-images">
         <p class="shop-link"><a>Shop now</a></p>
     </div>
@@ -114,7 +114,133 @@
         <img src="fashion.jpg" alt="Fashion" class="boxes-images">
         <p class="shop-link"><a>Shop now</a></p>
     </div>
+
+
+
+    <div class="box">
+        <h2 class="boxes-categories">Furniture</h2>
+        <img src="personal.jpg" alt="Health & Personal Care" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Toys</h2>
+        <img src="beauty.jpg" alt="Beauty Picks" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Grocery</h2>
+        <img src="electronics.jpg" alt="Electronics" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
+    <div class="box">
+        <h2 class="boxes-categories">Pet Supplies</h2>
+        <img src="fashion.jpg" alt="Fashion" class="boxes-images">
+        <p class="shop-link"><a>Shop now</a></p>
+    </div>
 </div>
+
+<footer>
+    <div class="foot-panel1">
+        Back to top
+    </div>
+
+    <div class="foot-panel2">
+
+        <ul class="footer-links">
+            <li class="link-list-items"><p>Get to Know Us</p></li>
+            <li class="link-list-items"><a>Careers</a></li>
+            <li class="link-list-items"><a>Amazon Newsletter</a></li>
+            <li class="link-list-items"><a>About Amazon</a></li>
+            <li class="link-list-items"><a>Accessibility</a></li>
+            <li class="link-list-items"><a>Sustainability</a></li>
+            <li class="link-list-items"><a>Press Center</a></li>
+            <li class="link-list-items"><a>Investor Relations</a></li>
+            <li class="link-list-items"><a>Amazon Devices</a></li>
+            <li class="link-list-items"><a>Amazon Science</a></li>
+        </ul>
+
+        <ul class="footer-links">
+            <li class="link-list-items"><p>Get to Know Us</p></li>
+            <li class="link-list-items"><a>Careers</a></li>
+            <li class="link-list-items"><a>Amazon Newsletter</a></li>
+            <li class="link-list-items"><a>About Amazon</a></li>
+            <li class="link-list-items"><a>Accessibility</a></li>
+            <li class="link-list-items"><a>Sustainability</a></li>
+            <li class="link-list-items"><a>Press Center</a></li>
+            <li class="link-list-items"><a>Investor Relations</a></li>
+            <li class="link-list-items"><a>Amazon Devices</a></li>
+            <li class="link-list-items"><a>Amazon Science</a></li>
+        </ul>
+
+        <ul class="footer-links">
+            <li class="link-list-items"><p>Get to Know Us</p></li>
+            <li class="link-list-items"><a>Careers</a></li>
+            <li class="link-list-items"><a>Amazon Newsletter</a></li>
+            <li class="link-list-items"><a>About Amazon</a></li>
+            <li class="link-list-items"><a>Accessibility</a></li>
+            <li class="link-list-items"><a>Sustainability</a></li>
+            <li class="link-list-items"><a>Press Center</a></li>
+            <li class="link-list-items"><a>Investor Relations</a></li>
+            <li class="link-list-items"><a>Amazon Devices</a></li>
+            <li class="link-list-items"><a>Amazon Science</a></li>
+        </ul>
+
+        <ul class="footer-links">
+            <li class="link-list-items"><p>Get to Know Us</p></li>
+            <li class="link-list-items"><a>Careers</a></li>
+            <li class="link-list-items"><a>Amazon Newsletter</a></li>
+            <li class="link-list-items"><a>About Amazon</a></li>
+            <li class="link-list-items"><a>Accessibility</a></li>
+            <li class="link-list-items"><a>Sustainability</a></li>
+            <li class="link-list-items"><a>Press Center</a></li>
+            <li class="link-list-items"><a>Investor Relations</a></li>
+            <li class="link-list-items"><a>Amazon Devices</a></li>
+            <li class="link-list-items"><a>Amazon Science</a></li>
+        </ul>
+
+    </div>
+
+    <div class="foot-panel3">
+
+
+        <img src="amazon-logo.jpg" alt="Amazon" class="foot-logo">
+
+
+
+        <div class="lang">
+
+            <select class="lang-select">
+                <i class="fa-solid fa-globe"></i>
+                <option>English</option>
+            </select>
+
+            <div class="currency">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <pre>  USD - U.S. Dollar</pre>
+            </div>
+
+            <div class="country">
+                <i class="fa-solid fa-flag-usa"></i>
+                <pre>   United States</pre>
+            </div>
+
+
+        </div>
+    </div>
+
+    <div class="foot-panel4">
+        <div class="panel4-line1">
+            <p class="panel4-line1-options">Conditions of Use</p>
+            <p class="panel4-line1-options">Privacy Notice</p>
+            <p class="panel4-line1-options">Consumer Health Data Privacy Disclosure</p>
+            <p class="panel4-line1-options">Your Ads Privacy Choices</p>
+        </div>
+        <div class="panel4-line2">
+            <i class="fa-regular fa-copyright"></i>
+            <p>1996-2026, Amazon.com, Inc. or its affiliates</p>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
