Update Javascript concepts 5: Document Object Model

--- a/Javascript/Revise2/index.html
+++ b/Javascript/Revise2/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Javascript</title>
 </head>
 <body>
 
-</body>
+
 <script src="first.js"></script>
+</body>
 </html>
