Tic-Tac-Toe game using javascript

--- a/Javascript/DOM/index.html
+++ b/Javascript/DOM/index.html
@@ -82,6 +82,11 @@
 
 </div>
 
+<!--Inline event handling-->
+<!--<button onclick="console.log('Button3 was clicked')" onmouseover="console.log('mouse over button3')">Button3</button>  -->
+
+
+<button class="toggle">Change Mode</button>
 
 
 <script src="script.js"></script>
